added some test content

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -10,9 +10,10 @@
     "bund4_react1": "webpack 2 (react app)",
     "bund5_react2": "webpack 2 (react 2dmethod)",
     "bund6_reactCra": "webpack 2 (create-react-app)",
+    "dep001_dpkg": "dpkg -i",
     "dep1_git": "git vcs",
-    "dep2_nodejs": "node.js [npm, nvm]",
-    "dep3_yarn": "yarn",
+    "dep2_nodejs": "node.js [npm, nvm, yarn]",
+    "dep3_terminal": "terminal [advanced designed]",
     "doc1": "Latin-ish",
     "Example Page": "Example Page",
     "dep2": "document number 2",
